--- a/android-virtual-pen/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/android-virtual-pen/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,46 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="12.7"
+    android:viewportHeight="12.7">
+  <group android:scaleX="0.69"
+      android:scaleY="0.69"
+      android:translateX="1.9685"
+      android:translateY="1.9685">
+    <path
+        android:pathData="m10.693,2.172a6.096,6.096 0,0 0,-8.621 0,6.096 6.096,0 0,0 -0.604,7.91l0.349,-0.025 -0.166,-0.506l0.231,-0.231l0.835,0.835 0.835,0.835l-0.231,0.231l-0.506,-0.166 -0.024,0.346a6.096,6.096 90,0 0,7.901 -0.61,6.096 6.096,0 0,0 0,-8.621z"
+        android:strokeWidth="0.114"
+        android:fillColor="#ffffff"
+        android:strokeColor="#00000000"/>
+    <path
+        android:pathData="m9.813,2.652c0,0 -1.709,1.123 -2.677,1.441 -0.966,0.317 -2.028,0.149 -2.028,0.149 0,0 0.246,0.782 -1.071,2.566 -1.317,1.784 -1.888,2.279 -1.888,2.279l0.815,0.815 0.814,0.814c0,0 0.496,-0.571 2.279,-1.888 1.784,-1.317 2.566,-1.071 2.566,-1.071 0,0 -0.168,-1.062 0.149,-2.028 0.318,-0.968 1.441,-2.677 1.441,-2.677l-3.268,3.268a0.648,0.648 0,0 1,-0.156 0.666,0.648 0.648,0 0,1 -0.916,0 0.648,0.648 0,0 1,-0 -0.917,0.648 0.648,0 0,1 0.674,-0.152z"
+        android:strokeLineJoin="miter"
+        android:strokeWidth="0.26696"
+        android:fillColor="#ffffff"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"/>
+    <path
+        android:pathData="m6.343,0.119a6.227,6.227 0,0 0,-6.227 6.227,6.227 6.227,0 0,0 5.278,6.15l0.234,-0.27 -0.485,-0.245l0,-0.334l1.207,0 1.207,0l0,0.334l-0.485,0.245 0.232,0.267a6.227,6.227 45,0 0,5.267 -6.147,6.227 6.227,0 0,0 -6.227,-6.227z"
+        android:strokeWidth="0.117"
+        android:strokeColor="#00000000">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="0.116"
+            android:startY="-2.842"
+            android:endX="0.116"
+            android:endY="14.227"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF3E82B9"/>
+          <item android:offset="1" android:color="#FF284E6D"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="m6.054,1.101c0,0 -0.423,2.046 -0.893,2.974 -0.469,0.927 -1.357,1.572 -1.357,1.572 0,0 0.742,0.387 1.08,2.627 0.337,2.24 0.283,3.01 0.283,3.01l1.177,0 1.177,0c0,0 -0.054,-0.77 0.283,-3.01 0.337,-2.24 1.08,-2.627 1.08,-2.627 0,0 -0.889,-0.646 -1.357,-1.572 -0.47,-0.929 -0.893,-2.974 -0.893,-2.974l0,4.72a0.662,0.662 0,0 1,0.369 0.593,0.662 0.662,0 0,1 -0.662,0.662 0.662,0.662 0,0 1,-0.662 -0.662,0.662 0.662,0 0,1 0.377,-0.596z"
+        android:strokeLineJoin="miter"
+        android:strokeWidth="0.26696"
+        android:fillColor="#f9f9f9"
+        android:strokeColor="#00000000"
+        android:strokeLineCap="butt"/>
+  </group>
 </vector>
