--- a/virtual-pen-linux-host/mainwindow.ui
+++ b/virtual-pen-linux-host/mainwindow.ui
@@ -59,7 +59,7 @@
      <rect>
       <x>420</x>
       <y>80</y>
-      <width>271</width>
+      <width>311</width>
       <height>16</height>
      </rect>
     </property>
@@ -70,7 +70,7 @@
      <number>50</number>
     </property>
     <property name="orientation">
-     <enum>Qt::Horizontal</enum>
+     <enum>Qt::Orientation::Horizontal</enum>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
@@ -78,7 +78,7 @@
      <rect>
       <x>420</x>
       <y>50</y>
-      <width>171</width>
+      <width>311</width>
       <height>17</height>
      </rect>
     </property>
@@ -91,7 +91,7 @@
      <rect>
       <x>420</x>
       <y>110</y>
-      <width>171</width>
+      <width>311</width>
       <height>17</height>
      </rect>
     </property>
@@ -104,7 +104,7 @@
      <rect>
       <x>420</x>
       <y>140</y>
-      <width>271</width>
+      <width>311</width>
       <height>16</height>
      </rect>
     </property>
@@ -112,7 +112,7 @@
      <number>100</number>
     </property>
     <property name="orientation">
-     <enum>Qt::Horizontal</enum>
+     <enum>Qt::Orientation::Horizontal</enum>
     </property>
    </widget>
    <widget class="QLabel" name="connectionStatusLabel">
@@ -125,19 +125,19 @@
      </rect>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
     </property>
     <property name="text">
      <string>Not Connected</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QLineEdit" name="deviceXSize">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>640</x>
       <y>220</y>
       <width>91</width>
       <height>21</height>
@@ -149,7 +149,7 @@
      <rect>
       <x>420</x>
       <y>220</y>
-      <width>171</width>
+      <width>211</width>
       <height>17</height>
      </rect>
     </property>
@@ -160,7 +160,7 @@
    <widget class="QLineEdit" name="deviceYSize">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>640</x>
       <y>250</y>
       <width>91</width>
       <height>21</height>
@@ -175,7 +175,7 @@
      <rect>
       <x>420</x>
       <y>250</y>
-      <width>171</width>
+      <width>211</width>
       <height>17</height>
      </rect>
     </property>
@@ -186,7 +186,7 @@
    <widget class="QComboBox" name="displayStyleComboBox">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>610</x>
       <y>180</y>
       <width>121</width>
       <height>25</height>
@@ -198,7 +198,7 @@
      <rect>
       <x>420</x>
       <y>180</y>
-      <width>111</width>
+      <width>181</width>
       <height>17</height>
      </rect>
     </property>
