--- a/virtual-pen-linux-host/mainwindow.ui
+++ b/virtual-pen-linux-host/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Virtual Pen Linux Host</string>
+   <string>Android Virtual Pen</string>
   </property>
   <property name="windowIcon">
    <iconset resource="icon.qrc">
